--- a/deployment/configs/config.json
+++ b/deployment/configs/config.json
@@ -10,7 +10,7 @@
         "text_field_character_limit": 32767
     },
     "slack": {
-        "enabled": true,
+        "enabled": false,
         "notify_default_owner": true,
         "channels": {
             "#hammer-slave1": ["ERROR|WARNING|ALARM|Task timed out after|Access denied"]
@@ -235,8 +235,8 @@
                 "checkname": "Low Utilization Amazon EC2 Instances",
 	            "name": "trusted_advisor_recommendations_low_ec2_utilization",
                 "accounts": [
-                    "987654321098",
-                    "123456789012"
+                    "123456789012",
+                    "098765432109"
                 ],
                 "filters": [
                     {
@@ -250,15 +250,15 @@
                         "value": "14"
                     }
                 ],
-                "ddb.table_name": "hammer-trusted-advisor-cost-optimizing-low-utilization-ec2-instances"
+                "ddb.table_name": "trusted-advisor-cost-optimizing-low-utilization-ec2-instances"
             },
             {
                 "category": "fault_tolerance",
                 "checkname": "Amazon EBS Snapshots",
                 "name": "trusted_advisor_recommendations_ebs_snapshots",
                 "accounts": [
-                    "987654321098",
-                    "123456789012"
+                    "123456789012",
+                    "098765432109"
                 ],
                 "filters": [
                     {
@@ -267,7 +267,7 @@
                         "value": "Red"
                     }
                 ],
-                "ddb.table_name": "hammer-trusted-advisor-fault-tolerance-ebs-snapshots"
+                "ddb.table_name": "trusted-advisor-fault-tolerance-ebs-snapshots"
             }
         ]
     }
